Feat: category, sub and topic modules (#15)
* Feat: init tables, some router

* Feat: more api endpoints

* Feat: category, sub and topic modules
