# api-service/src/entities/base-entity-audit.ts
@@ -1,15 +1,15 @@
-import { Column } from 'typeorm';
+import { BeforeInsert, Column } from 'typeorm';
 
 export class BaseEntityAudit {
   @Column({
     type: 'timestamp',
-    default: () => 'CURRENT_TIMESTAMP',
+    default: () => new Date(),
   })
   createdAt: Date;
 
   @Column({
     type: 'timestamp',
-    default: () => 'CURRENT_TIMESTAMP',
+    default: () => new Date(),
   })
   lastUpdatedAt: Date;
 
@@ -18,4 +18,10 @@ export class BaseEntityAudit {
 
   @Column({ type: 'varchar', length: 500, nullable: true })
   lastUpdatedBy: string;
+
+  @BeforeInsert()
+  beforeInsert() {
+    this.createdAt = new Date();
+    this.lastUpdatedAt = new Date();
+  }
 }
