# api-service/src/entities/index.ts
@@ -1,0 +1,7 @@
+export * from './base-entity-audit';
+export * from './category.entity';
+export * from './login-method.entity';
+export * from './role-permission.entity';
+export * from './sub-category.entity';
+export * from './topic.entity';
+export * from './user.entity';
